--- a/templates/search/search-page.html
+++ b/templates/search/search-page.html
@@ -1,7 +1,7 @@
 <div class="container list-view-wrapper">
     <div class="row">
         <div class="col-md-12 text-center">
-            <h1 class="no-margin-bottom"><i class="icon search"></i>Search within this IATI RVO portal</h1>
+            <h1 class="no-margin-bottom">Search within the portal of the Netherlands Enterprise Agency</h1>
             <div class="row">
                 <div class="col-sm-12 col-md-8 col-lg-6 col-md-offset-2 col-lg-offset-3">
                     <search-box current-page="search" search-value="vm.searchValue"></search-box>
