--- a/templates/countries/country-view-detail.html
+++ b/templates/countries/country-view-detail.html
@@ -18,7 +18,9 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="panel blue no-margin-bottom">
-                        <span class="flag-icon flag-icon-{{vm.country.code | lowercase }} big"></span><h1 class="title no-margin-bottom">{{vm.country.name}}</h1> 
+                        <span class="flag-icon flag-icon-{{vm.country.code | lowercase }} big"></span><h1 class="title no-margin-bottom">{{vm.country.name}}</h1>
+                        <hr>
+                        xxx projects in xxx sectors 
                     </div>
                     <div class="featured-image">
                         <img src="{{vm.templateBaseUrl}}/images/Develop2Build header.jpg">
@@ -32,37 +34,47 @@
                     <div class="panel white no-margin-bottom no-padding-bottom">
                         <h2><i class="icon euro"></i>Financial</h2>
                     </div>
-                    <table class="finance">
-                        <thead>
-                            <tr>
-                                <th>Transaction type</th>
-                                <th>Value</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>
-                                    Total programme expenditure
-                                </td>
-                                <td>
-                                    {{budget.budget__value | shortcurrency :'€'}}
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    Total programme budget
-                                </td>
-                                <td>
-                                    {{budget.budget__value | shortcurrency :'€'}}
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
+                    <div class="panel lightblue with-table no-header">
+                        <table class="no-format">
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        Total county expenditure
+                                    </td>
+                                    <td>
+                                        {{budget.budget__value | shortcurrency :'€'}}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Total county budget
+                                    </td>
+                                    <td>
+                                        {{budget.budget__value | shortcurrency :'€'}}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        Budget depletion
+                                    </td>
+                                    <td>
+                                        Figuurtje hier
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
 <!--                     <div class="graph">
                         <financials-line-chart has-to-contain="countries__in"></financials-line-chart>
                     </div> -->
                 </div>
                 <div class="col-md-4">
+                    <div class="panel lightblue">
+                        <h3>More information</h3>
+                        <hr>
+                        <p><a href="" target="_blank"><i class="icon link"></i>Visit country site on RVO.nl</a>
+                    </div>
+
                     <div class="panel lightblue">
                         <h3>Related videos</h3>
                         <hr>
@@ -91,15 +103,15 @@
                         <table class="no-format">
                             <tr>
                                 <td width="130">Download:</td>
-                                <td><a ng-click="vm.download('json')"><i class="icon download"></i>JSON</a></td>
+                                <td><a ng-click="vm.download('json')"><i class="fa fa-download"></i>JSON</a></td>
                             </tr>
                             <tr>
                                 <td>Share:</td>
                                 <td>
-                                    <a target="_blank" ng-href="http://twitter.com/home?status={{vm.shareDescription}}"><i class="icon twitter"></i></a>
-                                    <a target="_blank" ng-href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{vm.pageUrl}}"><i class="icon facebook"></i></a>
-                                    <a target="_blank" ng-href="http://www.linkedin.com/shareArticle?mini=true&url={{vm.pageUrl}}&title={{vm.shareDescription}}"><i class="icon linkedin"></i></a>
-                                    <a href=""><i class="icon email"></i></a>
+                                    <a target="_blank" ng-href="http://twitter.com/home?status={{vm.shareDescription}}"><i class="fa fa-twitter-square"></i></a>
+                                    <a target="_blank" ng-href="http://www.facebook.com/sharer/sharer.php?s=100&p[url]={{vm.pageUrl}}"><i class="fa fa-facebook-square"></i></a>
+                                    <a target="_blank" ng-href="http://www.linkedin.com/shareArticle?mini=true&url={{vm.pageUrl}}&title={{vm.shareDescription}}"><i class="fa fa-linkedin-square"></i></a>
+                                    <a href=""><i class="fa fa-envelope-square"></i></a>
                                 </td>
                             </tr>
                         </table>
@@ -115,23 +127,60 @@
     </div>
 
     <div ng-show="vm.selectedTab == 'activities'">
-        <activity-list 
-            has-to-contain="countries__in" 
-            count="vm.tabs[1].count"
-            shown="vm.selectedTab == 'activities'"></activity-list>
+        <div class="container extra detailview">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel blue no-margin-bottom">
+                        <span class="flag-icon flag-icon-{{vm.country.code | lowercase }} big"></span><h1 class="title no-margin-bottom">{{vm.country.name}}</h1>
+                        <hr>
+                        xxx projects in xxx sectors 
+                    </div>
+
+                    <activity-list 
+                        has-to-contain="countries__in" 
+                        count="vm.tabs[1].count"
+                        shown="vm.selectedTab == 'activities'"></activity-list>
+
+                </div>
+            </div>
+        </div>
     </div>
 
     <div ng-show="vm.selectedTab == 'sectors'">
-        <sector-list 
-            has-to-contain="countries__in" 
-            count="vm.tabs[2].count"
-            shown="vm.selectedTab == 'sectors'"></sector-list>
+        <div class="container extra detailview">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel blue no-margin-bottom">
+                        <span class="flag-icon flag-icon-{{vm.country.code | lowercase }} big"></span><h1 class="title no-margin-bottom">{{vm.country.name}}</h1>
+                        <hr>
+                        xxx projects in xxx sectors 
+                    </div>
+
+                    <sector-list 
+                        has-to-contain="countries__in" 
+                        count="vm.tabs[2].count"
+                        shown="vm.selectedTab == 'sectors'"></sector-list>
+                </div>
+            </div>
+        </div>
     </div>
 
     <div ng-show="vm.selectedTab == 'implementing-organisations'">
-        <implementing-organisations-list 
-            has-to-contain="countries__in"
-            count="vm.tabs[3].count"
-            shown="vm.selectedTab == 'implementing-organisations'"></implementing-organisations-list>
+        <div class="container extra detailview">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="panel blue no-margin-bottom">
+                        <span class="flag-icon flag-icon-{{vm.country.code | lowercase }} big"></span><h1 class="title no-margin-bottom">{{vm.country.name}}</h1>
+                        <hr>
+                        xxx projects in xxx sectors 
+                    </div>
+
+                    <implementing-organisations-list 
+                        has-to-contain="countries__in"
+                        count="vm.tabs[3].count"
+                        shown="vm.selectedTab == 'implementing-organisations'"></implementing-organisations-list>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
