--- a/templates/implementingOrganisations/implementing-organisations-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-list.html
@@ -1,3 +1,17 @@
+<div class="row">
+  <div class="col-sm-12">
+    <div class="list front-callout">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="panel">
+            With XX projects within XX sectors and {{vm.totalCountries}} countries.
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container list-view-wrapper">
     <div class="row">
         <div class="col-md-12">
@@ -10,8 +24,6 @@
                         <option value="">Sort by...</option>
                         <option value="name">Name (A - Z)</option>
                         <option value="-name">Name (Z - A)</option>
-                        <option value="total_disbursements">Expenditure (increasing)</option>
-                        <option value="-total_disbursements">Expenditure (decreasing)</option>
                     </select>
                 </div>
                 <span class="results">Results: <span class="total">{{vm.totalOrganisations}}</span></span>
@@ -29,39 +41,23 @@
     </div>
 </div>
 
-<div class="row" infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1'>
-    <div class="activity-list-item col-sm-12">
-        <div class="panel no-margin-bottom header">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h4 class="no-margin">Organisation</h4>
-                </div>
-                <div class="col-sm-3">
-                    <h4 class="no-margin">Total budget</h4>
-                </div>
-                <div class="col-sm-3">
-                    <h4 class="no-margin">Total projects</h4>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="activity-list-item col-sm-12 sectors" 
-        ng-show="vm.organisations.length != 0"
-        ng-repeat="item in vm.organisations">
-        <div class="panel">
-            <div class="row">
-                <div class="col-sm-6">
-                    <h3 class="no-margin"><a ui-sref="organisation({ organisation_id: item.receiver_organisation_id })">{{ item.name }}</a></h3>
-                </div>
-                <div class="col-sm-3">
-                    <h3 class="no-margin">{{item.total_disbursements  | shortcurrency :'€'}}</h3>
-                </div>
-                <div class="col-sm-3">
-                    <h3 class="no-margin">{{item.activity_count}} projects</h3>
-                </div>
-            </div>
-        </div>
-    </div>
-
-</div>
+<table infinite-scroll='vm.nextPage()' infinite-scroll-disabled='vm.busy' infinite-scroll-distance='1' class="table list-overview">
+    <thead>
+        <tr>
+            <th>Organisation</th>
+            <th>Number of projects</th>
+            <th>Number of programmes</th>
+            <th>Ogranisation type</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr
+            ng-show="vm.organisations.length != 0"
+            ng-repeat="item in vm.organisations">
+            <td><a ui-sref="organisation({ organisation_id: item.receiver_organisation_id })">{{ item.name }}</a></td>
+            <td>{{item.activity_count}}</td>
+            <td></td>
+            <td>Gov/non-gov</td>
+        </tr>
+    </tbody>
+</table>
