--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -27,7 +27,7 @@
                         <table class="no-format">
                             <tbody>
                                 <tr>
-                                    <td>
+                                    <td width="200">
                                         Total sector expenditure
                                     </td>
                                     <td>
@@ -47,7 +47,12 @@
                                         Budget depletion
                                     </td>
                                     <td>
-                                        Figuurtje hier
+                                        <div class="progress">
+                                          <div class="progress-bar" role="progressbar" aria-valuenow="77" aria-valuemin="0" aria-valuemax="100" style="width: 77%;">
+                                            77% spent
+                                            <div class="gradient"></div>
+                                          </div>
+                                        </div>
                                     </td>
                                 </tr>
                             </tbody>
