--- a/templates/_layout/index.html
+++ b/templates/_layout/index.html
@@ -15,7 +15,7 @@
       <p><a href="mailto:iati@rvo.nl"><i class="fa fa-envelope"></i>iati@rvo.nl</a></p>
       <p><a href="https://twitter.com/AiddataRVO" target="_blank"><i class="icon twitter"></i>@AiddataRVO</a></p>
       <p><a href=""><i class="icon download"></i>Netherlands Enterprise Agency IATI activity file</a></p>
-      <p>IATI dataset last updated: XX</p>
+      <p class="margin-top-2">IATI dataset last updated: XX</p>
 </p>
     </div>
   </div>
