--- a/templates/sectors/sector-view-detail.html
+++ b/templates/sectors/sector-view-detail.html
@@ -5,6 +5,13 @@
         current-page="themas"></filter-bar>
 
     <div class="container extra">
+
+        <div class="white no-margin-bottom">
+            <h1 class="no-margin-bottom"><i class="icon presentation"></i> {{vm.sector.name}}</h1>
+        </div>
+
+        <hr class="darkblue no-margin-bottom">
+
         <sub-navbar 
             tabs='vm.tabs' 
             selected-tab='vm.selectedTab'>
@@ -17,10 +24,7 @@
 
             <div class="row">
                 <div class="col-md-8">
-                    <div class="panel blue no-margin-bottom">
-                        <h1 class="no-margin-bottom"><i class="icon presentation"></i> {{vm.sector.name}}</h1>
-                    </div>
-                    <div class="panel white no-margin-bottom no-padding-bottom">
+                    <div class="white no-margin-bottom no-padding-bottom">
                         <h2><i class="icon euro"></i>Financial</h2>
                     </div>
                     <div class="panel lightblue with-table no-header">
@@ -121,9 +125,6 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <div class="panel blue no-margin-bottom">
-                        <h1 class="no-margin-bottom"><i class="icon presentation"></i> {{vm.sector.name}}</h1>
-                    </div>
                     <activity-list 
                         has-to-contain="sectors__in"  
                         count="vm.tabs[1].count"
@@ -138,9 +139,6 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <div class="panel blue no-margin-bottom">
-                        <h1 class="no-margin-bottom"><i class="icon presentation"></i> {{vm.sector.name}}</h1>
-                    </div>
                     <country-list 
                         has-to-contain="sectors__in" 
                         count="vm.tabs[2].count"
@@ -155,9 +153,6 @@
 
             <div class="row">
                 <div class="col-md-12">
-                    <div class="panel blue no-margin-bottom">
-                        <h1 class="no-margin-bottom"><i class="icon presentation"></i> {{vm.sector.name}}</h1>
-                    </div>
                     <implementing-organisations-list 
                         has-to-contain="sectors__in" 
                         count="vm.tabs[4].count"
