expandable sector list fixed

--- a/templates/countries/country-list.html
+++ b/templates/countries/country-list.html
@@ -12,6 +12,19 @@
   </div>
 </div>
 
+<div class="row cirkle-vis">
+  <div class="col-sm-6">
+    Figure
+    <h3>Project distribution</h3>
+  </div>
+  <div class="col-sm-6">
+      Figure
+    <h3>Budget distibution</h3>
+  </div>
+</div>
+
+<hr class="darkblue">
+
 <div class="container list-view-wrapper">
      <div class="row">
         <div class="col-md-12">
