--- a/templates/implementingOrganisations/implementing-organisations-list.html
+++ b/templates/implementingOrganisations/implementing-organisations-list.html
@@ -1,16 +1,31 @@
+MAP HERE
+
 <div class="row">
   <div class="col-sm-12">
     <div class="list front-callout">
       <div class="row">
         <div class="col-sm-12">
           <div class="panel">
-            With XX projects within XX sectors and {{vm.totalCountries}} countries.
+            With XX projects within XX sectors and XX countries.
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+<div class="row cirkle-vis">
+  <div class="col-sm-6">
+    Figure
+    <h3>Project distribution</h3>
+  </div>
+  <div class="col-sm-6">
+      Figure
+    <h3>Budget distibution</h3>
+  </div>
+</div>
+
+<hr class="darkblue">
 
 <div class="container list-view-wrapper">
     <div class="row">
