--- a/templates/sectors/sectors-list.html
+++ b/templates/sectors/sectors-list.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <div ng-if="item.children" class="children" style="display: none;">
+    <div ng-if="item.children" class="children">
         <div collapse="vm.isCollapsed" ng-repeat="item in item.children" ng-include="'tree'"></div>
     </div>    
 </script>
